package Adapter;

public interface Power5V {
    public void output5V();
}
